# claude-engineer-toolkit

./: .cet.toml.example  .dockerignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cet/: __init__.py  cache.py  cli.py  client.py  config.py  mock.py
cet/core/: __init__.py  chunker.py  ui.py
cet/prompts/: __init__.py  explain.py  pr_review.py  spec_gen.py  test_gen.py
cet/tools/: __init__.py  explain.py  pr_review.py  spec_gen.py  test_gen.py
examples/github-action/: cet-review.yml
tests/: test_chunker.py  test_config.py  test_explain.py  test_pr_review.py
