[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-engineer-toolkit"
version = "0.1.0"
description = "Claude-powered CLI tools for backend engineers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
  {name = "Your Name", email = "you@example.com"}
]
keywords = ["claude", "ai", "cli", "engineering", "code-review", "openapi"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]
dependencies = [
  "anthropic>=0.25.0",
  "typer>=0.12.0",
  "rich>=13.0.0",
  "tomli>=2.0.0; python_version < '3.11'",
  "diskcache>=5.6.0",
  "gitpython>=3.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mock>=3.14",
  "ruff>=0.4.0",
  "mypy>=1.10",
]

[project.scripts]
cet = "cet.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/claude-engineer-toolkit"
Repository = "https://github.com/yourusername/claude-engineer-toolkit"
Issues = "https://github.com/yourusername/claude-engineer-toolkit/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cet*"]
